Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123905

[gstreamer] tst_QMediaCaptureSession::stress_test_setup_and_teardown test failure

    XMLWordPrintable

Details

    • Linux/X11
    • a4a4221d4 (dev), 137e2188b (6.7), b4d29b7d3 (6.6), e25d0181d (tqtc/lts-6.5), e3192c9f5 (dev), e787cd20c (6.7), 2105ecc07 (tqtc/lts-6.5)
    • Multimedia Wk 13-14, Multimedia wk 15-16

    Description

      `tst_QMediaCaptureSession::stress_test_setup_and_teardown` tests fail:

      12:04:34: Debugging /home/tim/build/build-qt6-dev-clang_17_qt_dev-Debug/qtmultimedia/tests/auto/integration/qmediacapturesession/tst_qmediacapturesession stress_test_setup_and_teardown ...
      ********* Start testing of tst_QMediaCaptureSession *********
      Config: Using QtTest library 6.8.0, Qt 6.8.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by Ubuntu Clang 17.0.6 (++20231209124227+6009708b4367-1~exp1~20231209124336.77)), ubuntu 22.04
      PASS   : tst_QMediaCaptureSession::initTestCase()
      0:00:00.478410214 65961 0x7fffcc0051e0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.485352486 65961 0x7fffcc0051e0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.554104298 65961 0x7fffb4021520 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.559620426 65961 0x7fffb4021520 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.618825756 65961 0x7fffcc005240 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.624117073 65961 0x7fffcc005240 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Resource temporarily unavailable), skipping segment
      0:00:00.687471805 65961 0x7fffb4021580 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.706945786 65961 0x7fffb4021580 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.709042525 65961 0x7fffb4021580 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.792667080 65961 0x7fffcc0052a0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.799229609 65961 0x7fffcc0052a0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.866136594 65961 0x7fffb40215e0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.875340550 65961 0x7fffb40215e0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.876478945 65961 0x7fffb40215e0 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.952629080 65961 0x7fffcc005300 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:00.965762247 65961 0x7fffcc005300 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.036659801 65961 0x7fffb4021640 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.043504948 65961 0x7fffb4021640 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.115700629 65961 0x7fffcc005360 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.121833580 65961 0x7fffcc005360 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.215338190 65961 0x7fffb4020c00 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.292472980 65961 0x7fffb4021700 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.296898250 65961 0x7fffb4021700 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Resource temporarily unavailable), skipping segment
      0:00:01.366118929 65961 0x7fffb4021760 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.372852797 65961 0x7fffb4021760 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.467953283 65961 0x7fff9800ac00 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.470159732 65961 0x7fff9800ac00 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.560042146 65961 0x7fffb4020d20 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.567256970 65961 0x7fffb4020d20 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.646902533 65961 0x7fffb4020d80 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Success), skipping segment
      0:00:01.652639822 65961 0x7fffb4020d80 WARN                audiosrc gstaudiosrc.c:227:audioringbuffer_thread_func:<audiosrc> error reading data -1 (reason: Resource temporarily unavailable), skipping segment
      
      (tst_qmediacapturesession:65961): GStreamer-CRITICAL **: 12:04:38.559: 
      Trying to dispose element audioInput, but it is in PLAYING instead of the NULL state.
      You need to explicitly set elements to the NULL state before
      dropping the final reference, to allow them to clean up.
      This problem may also be caused by a refcounting bug in the
      application or some element.
      

      Attachments

        For Gerrit Dashboard: QTBUG-123905
        # Subject Branch Project Status CR V

        Activity

          People

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes