GStreamer: process messages immediately

GStreamer delivers messages on the application thread, dispatching
events over a queue will could cause application logic to be reordered,
causing unit test failures

Task-number: QTBUG-123905
Change-Id: I2da313cde5a814d93337d532f8beb679a66c4fb1
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit a4a4221d4b71cd8b97066be27b9c6596c3ce77e6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 137e2188b0702fa1b9259c0eec1302a4d4fa5543)
(cherry picked from commit b4d29b7d31e7b458385bedc0c788328ca669244a)